# solana-multisig-server

./: .env.example  CURL_COMMANDS.md  Cargo.toml  docker-compose.yml  migrate.sh  test_endpoints.sh
migrations/: 000_users_table.sql  001_initial_schema.sql  002_fix_timestamp_types.sql
src/: auth_middleware.rs  errors.rs  main.rs
src/db/: mod.rs  multisigs.rs  pool.rs  proposals.rs  users.rs
src/models/: mod.rs  multisig.rs  proposal.rs  user.rs
src/routes/: auth.rs  mod.rs  multisig.rs  proposal.rs
src/services/: mod.rs  multisig_service.rs  proposal_service.rs
