[package]
name = "solana-multisig-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
argon2 = "0.5.3"
rand = "0.9.2"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
